Animation using CSS and SVG

--- a/index.html
+++ b/index.html
@@ -12,15 +12,18 @@
           border: 2px solid purple;
       }
     </style>
+    <link href="style.css" rel="stylesheet"/>
 </head>
 <body>
 
-    <svg viewBox="300 0 120 150" class="Box">
+    <!-- <svg viewBox="300 0 120 150" class="Box">
        <circle r="50" cx="75" cy="75" fill="lightblue"></circle>
        <circle r="50" cx="200" cy="75" fill="lightgreen"></circle>
        <circle r="50" cx="350" cy="75" fill="red"></circle>
-    </svg>
-    
+    </svg> -->
+    <!-- <svg width="190" height="160" xmlns="http://www.w3.org/2000/svg">
+        <path d="M 5 80 Q 52.5 10, 95 80 T 180 80" stroke="black" fill="red"/>
+      </svg> -->
     <!-- <svg width="270" height="280">
        <circle r="130" cx="290" cy="140" fill="none" stroke="black" stroke-width="2px"></circle> 
        <circle r="130" cx="270" cy="140" fill="none" stroke="black" stroke-width="2px"></circle> 
@@ -33,6 +36,11 @@
     <svg width="500" height="500">
         <polygon fill="purple" points="50,50 200,50 125,145 200,240  50,240  125,145 "/>
     </svg> -->
+
+    <div class="card">
+        <button class="button">Click</button>
+    </div>
+
 
 
 
