--- a/index.html
+++ b/index.html
@@ -37,12 +37,19 @@
         <polygon fill="purple" points="50,50 200,50 125,145 200,240  50,240  125,145 "/>
     </svg> -->
 
-    <div class="card">
+    <!-- <div class="card">
         <button class="button">Click</button>
-    </div>
+    </div> -->
 
 
-
+<svg width="320" height="320">
+    <path d="M 10 315
+    L 110 215
+    A 30 50 0 0 1 162.55 162.45
+    L 172.55 152.45
+    A 30 50 -45 0 1 215.1 109.9
+    L 315 10" stroke="black" fill="transparent" stroke-width="4" fill-opacity="1.5"/>
+</svg>
 
 </body>
 </html>
